src/static/css/main.css
html,
body,
#mymap,
#page-content,
#page-wrapper {
	display: block;
	width: 100%;
	height: 100%;
	margin:0;
	padding: 0;
}

#mapid {
	background: #58B;
}

#page-content{
	padding-top: 50px;
}

#page-wrapper{
	position: relative;
}

.navbar{
	margin-bottom: 0;
	z-index: 1010;
	width: 100%;
	opacity: 1;
	position: absolute;
}

#left-panel{
	height : 100%;
	left: 0;
	margin:0;
	padding: 0;
	width : 300px;
	position : absolute;
	background-color: white;
	z-index: 1005;
	-webkit-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	-o-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	transition: all 0.7s cubic-bezier(.55,0,.1,1);
}

#left-panel.closePanel{
	left : -300px;
}

#left-panel + #mymap .leaflet-control-zoom{
	left : 300px;
	-webkit-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	-o-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	transition: all 0.7s cubic-bezier(.55,0,.1,1);
}

#left-panel.closePanel + #mymap .leaflet-control-zoom{
	left : 0;
}

@media (min-width:1200px) {
	#page-content{
		padding-top: 60px;
	}
}

#left-panel-content{
	height: 100%;
	overflow: auto;
}

#left-panel-form{
	background-color: #5C6BC0;
	color : white;
	padding-top : 15px;
	padding-bottom: 40px;
	position : relative;
	padding-left: 15px;
	padding-right: 15px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

#left-panel-form .form-group.is-focused .form-control{
    background-image: linear-gradient(#fff,#fff),linear-gradient(#D2D2D2,#D2D2D2);
    color : white;
}

#left-panel-form .form-group.is-focused label,
#left-panel-form .form-group.is-focused label.control-label {
    color : white;
}

#addr-search-submit{
	position : absolute;
	top : 100%;
	right : 15px;
    margin-top: -28px;
	z-index: 1017;
	background-color: #EEE;
	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

#search-results .list-group hr{
	/* instead of classic 20 top/bottom */
	margin : 0;
}

#search-results .list-group .list-group-item{
	/* to replace the 20 top/bottom within the list item */
	padding-top: 20px;
	padding-bottom: 20px;
	margin-top: 0;
	cursor: pointer;
}

.place-result-item:hover{
	background-color: #B0BEC5;
}

.place-result-item.selected{
	background-color: #78909C;
	color : white;
}

.place-result-item.selected .list-group-item-heading{
	color : white;
}

.place-result-item .media-right{
		position: relative;
		min-width: 40px;
}

.place-result-item .media-right .fab{
	position: absolute;
	display: block;
	margin-top: -50%;
	left: 56px;
	color: white;
	-webkit-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	-o-transition: all 0.7s cubic-bezier(.55,0,.1,1);
	transition: all 0.7s cubic-bezier(.55,0,.1,1);
}

.place-result-item.selected .media-right .fab{
	left:0;
}

.navbar{
	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}


.fab:hover{
	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)!important;	    
}
.fab:active,
.fab:focus{
	box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
	outline: none!important;
}

#left-panel-result{
    padding-top: 40px;
	/* background-color: #aaa; */
}

#search-results > h4{
	margin : 0 15px 5px 15px;
}

.widget-pane-toggle-button-container{
	position: absolute;
	z-index: 0;
	top: 67px;
	left: 100%;
	display : block;
}

.widget-pane-toggle-button-container .btn{
	height: 40px;
	padding: 4px;
    margin-left: 14px;
}

.noselect {
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none;   /* Chrome/Safari/Opera */
	-khtml-user-select: none;    /* Konqueror */
	-moz-user-select: none;      /* Firefox */
	-ms-user-select: none;       /* Internet Explorer/Edge */
	user-select: none;           /* Non-prefixed version, currently*/
}

.g-recaptcha {
	margin: auto;
	width : 304px;
}

.instruction {
	margin-top: 20px;
}

.menu-ref {
	color: #283593;
}

.danger {
	color: #d32f2f;
}

.navbar a,
.navbar a:focus,
.navbar a:active{
	outline: none;
}

#delete-account-panel{
	margin-top: 20px;
}

.no-result{
	margin-right: 15px;
	margin-left: 15px;
}

.popupUsers{
	overflow: auto;
	max-height: 150px;
}

